--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
